--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0",
     "redux-logger": "^3.0.6"
   },
   "scripts": {
