--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
